# machine_sim

./: .gitignore  CMakeLists.txt  README.md  axis.cpp  axis.h  constants.h.in  doubleclickslider.h  machine.cpp  machine.h  machine_params.h  machine_params.ui  machine_sim.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: main.yml
resources/: icon_mac.icns  resources.rc
